chore: fix various build/compilation warnings